@gkatsev fixed vertical slider alignment in volume menu button. closes #2943

--- a/src/css/components/_volume.scss
+++ b/src/css/components/_volume.scss
@@ -36,6 +36,7 @@
 .vjs-volume-bar.vjs-slider-vertical {
   width: 0.3em;
   height: 5em;
+  margin: 1.35em auto;
 }
 
 .video-js .vjs-volume-level {
